LibNew can't find LibLoaded meshes #39932

Closed
opened 2014-04-28 13:11:53 +02:00 by Raf Colson · 8 comments

System Information
Windows 7 64 bit, Nvidia GeForce GT540M Cuda

Blender Version
Broken in every version. Tested in 2.50alpha up to current 2.70a.

Short description of error
LibNew can't find any meshes that were imported with LibLoad, both of type 'Scene' and 'Mesh'

Exact steps for others to reproduce the error

  • load external blend file (containing a Mesh Object) with LibLoad type 'Scene' or 'Mesh'
  • create a new mesh using the LibLoaded mesh named "Cube" => System Console produces following message: Could not be found: "Cube"

Attached zip file with three blends. 'Library.blend' contains object named 'Cube'. 'LibLoad_Scene_00' and 'LibLoad_Mesh_00' illustrate issues with LibLoad types 'Scene' and 'Mesh'.
LibLoaded_mesh_not_found_with_LibNew_bug.zip

**System Information** Windows 7 64 bit, Nvidia GeForce GT540M Cuda **Blender Version** Broken in every version. Tested in 2.50alpha up to current 2.70a. **Short description of error** LibNew can't find any meshes that were imported with LibLoad, both of type 'Scene' and 'Mesh' **Exact steps for others to reproduce the error** - load external blend file (containing a Mesh Object) with LibLoad type 'Scene' or 'Mesh' - create a new mesh using the LibLoaded mesh named "Cube" => System Console produces following message: *Could not be found: "Cube"* Attached zip file with three blends. 'Library.blend' contains object named 'Cube'. 'LibLoad_Scene_00' and 'LibLoad_Mesh_00' illustrate issues with LibLoad types 'Scene' and 'Mesh'. [LibLoaded_mesh_not_found_with_LibNew_bug.zip](https://archive.blender.org/developer/F86270/LibLoaded_mesh_not_found_with_LibNew_bug.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @raco

Added subscriber: @raco

Added subscriber: @sdfgeoff

Added subscriber: @sdfgeoff

I can confirm that this problem exists.

System Information:
Linux Mint 16 64 bit, Radeon 7670M

Tested in 2.70.1 (hash f93bc76)

I can confirm that this problem exists. System Information: Linux Mint 16 64 bit, Radeon 7670M Tested in 2.70.1 (hash f93bc76)

This issue was referenced by blender/blender-addons-contrib@5f80a7ffe2

This issue was referenced by blender/blender-addons-contrib@5f80a7ffe25fdda77904d06c8e7b6ff37731d25b

This issue was referenced by 5f80a7ffe2

This issue was referenced by 5f80a7ffe25fdda77904d06c8e7b6ff37731d25b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5f80a7ffe2.

Closed by commit 5f80a7ffe2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39932
No description provided.