Fix T39932: LibNew can't find LibLoaded meshes.

LibNew now searchs dynamic (i.e., LibLoaded)  mains instead of just the current main.